manifests/base/resources/odag/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9098"
    prometheus.io/scrape: "true"
  labels:
    app: odag
    chart: odag-1.9.0
    heritage: Helm
    release: odag
  name: odag
spec:
  ports:
  - name: odag
    port: 9098
    protocol: TCP
  selector:
    app: odag
    release: odag
  type: ClusterIP
---
