manifests/base/resources/odag/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://odag-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/odag/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: odag
    chart: odag-1.9.0
    heritage: Helm
    release: odag
  name: odag
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/odag/openapi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://odag-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/v1/(.*) /v1/$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: odag
    chart: odag-1.9.0
    heritage: Helm
    release: odag
  name: odag-api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/v1/odag
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/v1/odaglinks
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/v1/odagisavailable
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/v1/odagsettings
      - backend:
          serviceName: odag
          servicePort: 9098
        path: /api/v1/odagrequests
---
